# fireworks

./: .gitignore  Cargo.toml  fireworks.d.ts  fireworks.js  fireworks_bg.wasm.d.ts  justfile  math.txt
src/: fireworks.rs  input.rs  main.rs  mouse.rs  path_mesh.rs  physics.rs  rng.rs  spawner.rs
